--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "materialize": "^0.98.0"
+    "materialize": "^0.98.0",
+    "gmaps": "^0.4.25"
   }
 }
